Prepare to release v2.7.r1